--- a/Index.html
+++ b/Index.html
@@ -7,14 +7,14 @@
         <!--Container to wrap everything-->
         <div id="container">
             <!--Website Brand-->
-            <header>My Website Brand</header>
+            <header>My Web Site Brand</header>
             <!--Main Navigation-->
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Gallery</li>
-                    <li>Contact</li>
+                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="page2.html">About</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="page3.html">Contact</a></li>
                 </ul>
             </nav>
             <!--End of Navigation-->
