Switched to External CSS

--- a/Index.html
+++ b/Index.html
@@ -2,73 +2,15 @@
 <html>
     <head>
         <title>My First Web Page</title>
-<<<<<<< HEAD
         <!--Embed Style Method-->
-        <style>
-            header {
-                background:url("https://media.istockphoto.com/id/1982420794/photo/cute-small-dog-showing-tongue-studio-portrait-shih-tzu-and-maltese-mix.jpg?s=2048x2048&w=is&k=20&c=1B1RFGz4-i42lxW3ATBVDT_9US6jgbE94Bs3WBS3T1k=") 0-200px no-repeat; /*place image as background */                          
-                background-size: 1500px;
-                /*background position: 0-200px;*/
-                /*background-repeat: no-repeat;*/
-                height: 400px; /*give header some height to display the background image */
-                padding-top: 100px;
-                padding-left: 100px;
-                font-weight: bold;
-                font-family: Arial, Helvetica, sans-serif;
-              }
-              li {
-                list-style-type: none;
-                display: inline;
-                padding: 0 20px;
-              }
-              li a {
-                text-decoration: none;
-              }
-              li a:link {
-                color: #000; /* Before Click */
-              }
-              li a:visited {
-                color: #818db3; /* After Click */
-              }
-              li a:hover {
-                color: #333; /* Mouse Over */
-              }
-              li a:active {
-                color: #753a30; /* Mouse Down */
-              }
-              nav {
-                background-color: rgb(253, 245, 238);
-                height: 50px;
-                text-align: center;
-                padding-top: 2px;
-              }
-              main {
-                height: 400px;
-              }
-              main h1 {
-                color: rgb(129, 141, 179);
-                font-family: arial;
-              }
-              footer {
-                height: 40px;
-                background-color:rgb(129, 141, 179);
-                text-align: center;
-                padding-top: 20px;
-                color: rgb(211, 218, 240);
-              }
-        </style>
-=======
->>>>>>> 644c1f4e23958d1f66fa23b10d67ffd9f094c35c
+        
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--Container to wrap everything-->
         <div id="container">
             <!--Website Brand-->
-<<<<<<< HEAD
-            <header style="font-size: 60px;color: #fff;">My Web Site Brand</header>
-=======
             <header>My Web Site Brand</header>
->>>>>>> 644c1f4e23958d1f66fa23b10d67ffd9f094c35c
             <!--Main Navigation-->
             <nav>
                 <ul>
