--- a/page2.html
+++ b/page2.html
@@ -24,7 +24,7 @@
             <main>
                 <h1>My First Heading</h1>
                 <p>My First Paragraph</p>
-                <table border="1">
+                <table>
                     <caption>Calories Comparison of Popular Burgers</caption>
                     <thead>
                         <tr>
