--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="Index.html">Home</a></li>
                     <li><a href="page2.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="page4.html">Gallery</a></li>
                     <li><a href="page3.html">Contact</a></li>
                 </ul>
             </nav>
@@ -27,24 +27,24 @@
                 <form action="/signup" method="post">
                     <fieldset>
                         <legend>User Personal Information</legend>
-                        <label>Enter your full name</label><br>
-                        <input type="text" name="name"><br>
-                        <label>Enter your email</label><br>
-                        <input type="email" name="email"><br>
-                        <label>Enter your phone number</label><br>
-                        <input type="text" name="phone"><br>
+                        <label>Enter your full name</label>
+                        <input type="text" name="name">
+                        <label>Enter your email</label>
+                        <input type="email" name="email">
+                        <label>Enter your phone number</label>
+                        <input type="text" name="phone">
                         <br>
                         <label>Select your gender</label><br>
                         <input type="radio" name="gender" value="male">Male
-                        <input type="radio" name="gender" value="female">Female<br>
+                        <input type="radio" name="gender" value="female">Female
                         <br>
-                        <label>How should we contact you?</label><br>
+                        <label>How should we contact you?</label>
                         <select>
                             <option>Email</option>
                             <option>Phone</option>
                         </select><br>
                         <br>
-                        Tell us the reason for your visit today:<br>
+                        <label>Tell us the reason for your visit today:</label>
                         <textarea rows="6" columns="30"></textarea><br>
                         <input type="submit" value="Signup">
 
