commit new changes

--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,30 @@
                 <h1>My First Heading</h1>
                 <p>My First Paragraph</p>
             </main>
+
+            <section>
+                <ul id="partner">
+                    <!--<li class="partner">
+                        <img src="images/partner-bustour.png" alt="Partner Bus Tours">
+                    </li>
+                    <li class="partner">
+                        <img src="images/partner-cabinrental.png" alt="Partner Cabin Rental">
+                    </li>
+                    <li class="partner">
+                        <img src="images/partner-campingadv.png" alt="Partner Camping Adventure">
+                    </li>
+                    <li class="partner">
+                        <img src="images/partner-collegetours.png" alt="Partner College Tours">
+                    </li>
+                    <li class="partner">
+                        <img src="images/partner-rentalbike.png" alt="Partner Bike Rentals">
+                    </li>
+                    <li class="partner">
+                        <img src="images/partner-tourgroup.png" alt="Partner Tour Group">
+                    </li>-->
+                    
+                </ul>
+            </section>
             <!--End of Main Content-->
             <!--Footer Information-->
             <footer>&copy; Copyright 2025</footer>
