--- a/page3.html
+++ b/page3.html
@@ -48,6 +48,21 @@
                         <textarea rows="6" columns="30"></textarea><br>
                         <input type="submit" value="Signup">
 
+                        <div class="commentbox">
+                            <label>How did you hear about us:</label>
+                            <textarea></textarea>
+                        </div>
+
+                        <!--Random Codes-->
+                        <div class="randomcode">
+                            <input type="text" name="randomcode" placeholder="Enter Characters">
+                            <p id="codes"></p>
+                        </div>
+
+                        <div class="button">
+                            <input type="submit" id="submit" value="Inquire">
+                        </div>
+
                     </fieldset>
                 </form>
             </main>
@@ -55,6 +70,11 @@
             <!--Footer Information-->
             <footer>&copy; Copyright 2025</footer>
         </div>
+        <!--Digital Clock-->
+        <script src="js/digclock.js"></script>
+        <script>
+            /*-------PARTNERS-------*/
+        </script>
         <!--End of Content-->
     </body>
 </html>
