commit all updated files

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,10 @@
         <!--Embed Style Method-->
         
         <link rel="stylesheet" href="style.css">
+        <!--Digital Clock-->
+        <script src="js/digclock.js"></script>
+        <!--Partners-->
+        <script src="js/site_script.js"></script>
     </head>
     <body>
         <!--Container to wrap everything-->
