--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,8 @@
         <title>My First Web Page</title>
 
         <link rel="stylesheet" href="style.css">
+        <!--Partners-->
+        <script src="js/site_script.js"></script>
     </head>
     <body>
         <!--Container to wrap everything-->
