--- a/page3.html
+++ b/page3.html
@@ -95,6 +95,15 @@
             </main>
             <!--End of Main Content-->
             <!--Footer Information-->
+            <!-- Footer section -->
+            <footer>
+                <div id="nondisclaimer">  
+                    <div class="social">
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                    </div>
+                </div>
             <footer>&copy; Copyright 2025</footer>
         </div>
         <!--Digital Clock-->
