--- a/page4.html
+++ b/page4.html
@@ -19,6 +19,7 @@
                     <li><a href="page2.html">About</a></li>
                     <li><a href="page4.html">Gallery</a></li>
                     <li><a href="page3.html">Contact</a></li>
+                    <li><a href="activity.html">Activity</a></li>
                 </ul>
             </nav>
             <!--End of Navigation-->
