--- a/activity.html
+++ b/activity.html
@@ -4,6 +4,26 @@
   <meta charset="UTF-8">
   <title>Activity Selector</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color:  rgb(255, 255, 255);
+    }
+
+    .table-container {
+      width: 70%;
+      margin: 40px auto;
+      text-align: center;
+    }
+
+    .table-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 15px;
+      color: rgb(255, 255, 255);
+      background-color: #2c3e50;
+      padding: 12px;
+      border-radius: 6px 6px 0 0;
+    }
     table {
       border-collapse: collapse;
       width: 60%;
