--- a/activity.html
+++ b/activity.html
@@ -53,7 +53,7 @@
     }
   </style>
 </head>
-<body>
+<main>
 
 <table id="activityTable">
   <thead>
@@ -104,6 +104,16 @@
   </tbody>
 </table>
 
+<div id="displaySelected">
+    <div id="result">
+        <h4>My selected activities to enquire:</h4>
+    </div>
+    <div id="sendinfo">
+        <input type="email" placeholder="johndoe@gmail.com">
+        <button>Get Info</button>
+    </div>
+</div>
+</main>
 <!-- jQuery CDN -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
