--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
 
             <section>
                 <ul id="partner">
-                    <!--<li class="partner">
+                    <li class="partner">
                         <img src="images/partner-bustour.png" alt="Partner Bus Tours">
                     </li>
                     <li class="partner">
@@ -51,7 +51,7 @@
                     </li>
                     <li class="partner">
                         <img src="images/partner-tourgroup.png" alt="Partner Tour Group">
-                    </li>-->
+                    </li>
                     
                 </ul>
             </section>
